--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,3 +15,12 @@
 */
 
 // Your class assignment code goes here
+.card {
+transition: transform 0.2s;
+
+&:hover {
+    transform:scaleY(20);
+    transform: rotate(360deg);
+
+}
+}
