burger icon animation

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,3 +24,16 @@ transition: transform 0.2s;
 
 }
 }
+
+.burger-icon {
+    animation:itrotates 2s infinite;
+}
+
+    @keyframes itrotates {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(306deg);
+        }
+        }
