--- a/styles/main.css
+++ b/styles/main.css
@@ -471,4 +471,31 @@ h3 {
   -webkit-transform: rotate(360deg);
           transform: rotate(360deg);
 }
+
+.burger-icon {
+  -webkit-animation: itrotates 2s infinite;
+          animation: itrotates 2s infinite;
+}
+
+@-webkit-keyframes itrotates {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(306deg);
+            transform: rotate(306deg);
+  }
+}
+
+@keyframes itrotates {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(306deg);
+            transform: rotate(306deg);
+  }
+}
 /*# sourceMappingURL=main.css.map */
